--- a/src/style.css
+++ b/src/style.css
@@ -6,10 +6,12 @@
   color: #2c3e50;
 }
 
-html, body {
+html, body, #app {
   margin: 0px;
   padding: 0px;
   overflow: hidden;
+  width: 100vw;
+  height: 100vh;
 }
 
 canvas {
