Lobby now starts the game and players are customizable

--- a/src/style.css
+++ b/src/style.css
@@ -17,3 +17,10 @@ html, body, #app {
 canvas {
   border: 1px solid black;
 }
+
+.exitGameButton {
+  position: absolute;
+  top: 20px;
+  left: 20px;
+  color: white;
+}
