--- a/src/index.css
+++ b/src/index.css
@@ -12,9 +12,153 @@ code {
     monospace;
 }
 
-.disabled a {
+/* App styles */
+html, body {
+  background-color: #090909;
+  color: white;
+}
+
+.text_success {
+  color: greenyellow;
+}
+
+.text_warning {
+  color: yellow;
+}
+
+.text_error {
+  color: red;
+}
+
+.title {
+  text-decoration: underline;
+  margin-left: auto;
+  margin-right: auto;
+  width: 80%;
+  text-align: center;
+}
+
+#MainMenu {
+  margin-left: auto;
+  margin-right: auto;
+  width: 15%;
+}
+
+#ConnectionStatus {
+  position: absolute;
+  bottom: 0px;
+  right: 0px;
+  padding: 5px
+}
+
+.menu_button, .menu_button:visited {
+  border-left: 3px solid;
+  border-right: 3px solid;
+  border-color: blue;
+  padding: 5px;
+  display: block;
+  color: white;
+  text-decoration: none;
+  text-align: center;
+  transform: scale(0.9);
+}
+
+.menu_button:hover {
+  border-color: yellow;
+  transform: scale(1.0);
+  font-weight: bold;
+}
+
+.disabled_button {
   pointer-events: none;
   cursor: default;
   opacity: 0.8;
-  color: orange
+  color: grey !important;
+  border-color: gray !important;
+}
+
+#PlayerSettingsCardsWrapper {
+  display: flex;
+  justify-content: space-around;
+  margin-top: 10px;
+  margin-bottom: 10px;
+}
+
+.player_settings {
+  display: flex;
+  flex-direction: column;
+  flex-basis: 22%;
+  border: 3px solid;
+  padding: 5px;
+}
+
+.player_settings:nth-of-type(1) {
+  border-color: red;
+}
+
+.player_settings:nth-of-type(2) {
+  border-color: green;
+}
+
+.player_settings:nth-of-type(3) {
+  border-color: blue;
+}
+
+.player_settings:nth-of-type(4) {
+  border-color: yellow;
+}
+
+.player_settings>.icon_wrap {
+  width: 32px;
+  height: 32px;
+  overflow: hidden;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+/* DONT ASK. TRIAL AND ERROR. CROPS THE SPRITESHEET IMAGE */
+/* Cannot use clip-path, as it hides rest of the image but keeps the bounding box */
+.player_settings:nth-of-type(1) .icon_wrap>img {
+  margin: -2px 0px -320px -2px;
+}
+
+.player_settings:nth-of-type(2) .icon_wrap>img {
+  margin: -45px 0px -320px -5px;
+}
+
+.player_settings:nth-of-type(3) .icon_wrap>img {
+  margin: -75px 0px -251px -2px;
+}
+
+.player_settings:nth-of-type(4) .icon_wrap>img {
+  margin: -128px 0px -251px -5px;
+}
+
+.player_settings>div {
+  display: flex;
+  flex-direction: row;
+}
+
+.player_settings label {
+  display: block;
+  flex-basis: 75%;
+}
+
+.player_settings input {
+  display: block;
+  flex-basis: 25%;
+  min-width: 0;
+}
+
+canvas {
+  display: block;
+}
+
+#GameView {
+  display: flex;
+}
+
+#GameSidebar {
+  width: 100%;
+  border: 1px solid white;
 }
