--- a/src/index.css
+++ b/src/index.css
@@ -1,21 +1,42 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
-
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
-}
-
-/* App styles */
-html, body {
+html {
+  margin: 0px;
+  padding: 0px;
   background-color: #090909;
   color: white;
+  font-family: 'Pixel-Art';
+}
+
+body {
+  margin: 0px;
+  padding: 0px;
+}
+
+button {
+  font-family: 'Pixel-Art';
+}
+
+button, button:visited {
+  background-color: transparent;
+  border: 0px;
+  border-left: 3px solid;
+  border-right: 3px solid;
+  border-color: blue;
+  padding: 5px;
+  display: block;
+  color: white;
+  text-decoration: none;
+  text-align: center;
+  /* transform: scale(0.9); */
+}
+
+button:hover {
+  border-color: yellow;
+  font-weight: bold;
+  /* transform: scale(1.0); */
+}
+
+canvas {
+  display: block;
 }
 
 .text_success {
@@ -30,43 +51,50 @@ html, body {
   color: red;
 }
 
+/* Box model */
 .title {
-  text-decoration: underline;
+  /*text-decoration: underline;*/
   margin-left: auto;
   margin-right: auto;
   width: 80%;
   text-align: center;
 }
 
-#MainMenu {
-  margin-left: auto;
-  margin-right: auto;
-  width: 15%;
+.container-100 {
+  width: 100%;
+  margin: auto;
 }
 
-#ConnectionStatus {
-  position: absolute;
-  bottom: 0px;
-  right: 0px;
-  padding: 5px
+.container-80 {
+  width: 80%;
+  margin: auto;
 }
 
-.menu_button, .menu_button:visited {
-  border-left: 3px solid;
-  border-right: 3px solid;
-  border-color: blue;
-  padding: 5px;
+.container-60 {
+  width: 60%;
+  margin: auto;
+}
+
+.container-40 {
+  width: 40%;
+  margin: auto;
+}
+
+.container-20 {
+  width: 20%;
+  margin: auto;
+}
+
+.vertical_button_group>button {
   display: block;
-  color: white;
-  text-decoration: none;
-  text-align: center;
-  transform: scale(0.9);
+  width: 100%;
+  margin-top: 5px;
 }
 
-.menu_button:hover {
-  border-color: yellow;
-  transform: scale(1.0);
-  font-weight: bold;
+.horizontal_button_group>button {
+  display: inline;
+  width: 20%;
+  margin-left: 5px;
 }
 
 .disabled_button {
@@ -82,83 +110,4 @@ html, body {
   justify-content: space-around;
   margin-top: 10px;
   margin-bottom: 10px;
-}
-
-.player_settings {
-  display: flex;
-  flex-direction: column;
-  flex-basis: 22%;
-  border: 3px solid;
-  padding: 5px;
-}
-
-.player_settings:nth-of-type(1) {
-  border-color: red;
-}
-
-.player_settings:nth-of-type(2) {
-  border-color: green;
-}
-
-.player_settings:nth-of-type(3) {
-  border-color: blue;
-}
-
-.player_settings:nth-of-type(4) {
-  border-color: yellow;
-}
-
-.player_settings>.icon_wrap {
-  width: 32px;
-  height: 32px;
-  overflow: hidden;
-  margin-left: auto;
-  margin-right: auto;
-}
-
-/* DONT ASK. TRIAL AND ERROR. CROPS THE SPRITESHEET IMAGE */
-/* Cannot use clip-path, as it hides rest of the image but keeps the bounding box */
-.player_settings:nth-of-type(1) .icon_wrap>img {
-  margin: -2px 0px -320px -2px;
-}
-
-.player_settings:nth-of-type(2) .icon_wrap>img {
-  margin: -45px 0px -320px -5px;
-}
-
-.player_settings:nth-of-type(3) .icon_wrap>img {
-  margin: -75px 0px -251px -2px;
-}
-
-.player_settings:nth-of-type(4) .icon_wrap>img {
-  margin: -128px 0px -251px -5px;
-}
-
-.player_settings>div {
-  display: flex;
-  flex-direction: row;
-}
-
-.player_settings label {
-  display: block;
-  flex-basis: 75%;
-}
-
-.player_settings input {
-  display: block;
-  flex-basis: 25%;
-  min-width: 0;
-}
-
-canvas {
-  display: block;
-}
-
-#GameView {
-  display: flex;
-}
-
-#GameSidebar {
-  width: 100%;
-  border: 1px solid white;
 }
