--- a/src/ui/components/NetGameList.css
+++ b/src/ui/components/NetGameList.css
@@ -8,7 +8,7 @@
 
 #NetGameListTable thead tr {
     border: 3px solid white;
-    background: #000042;
+    background: var(--bgr-accent-color);
 }
 
 #NetGameListTable thead td {
@@ -21,5 +21,5 @@
 }
 
 #NetGameListTable tbody tr:nth-child(even) {
-    background: #212121;
+    background: var(--bgr-lighter-color);
 }
