--- a/src/ui/game/Game.css
+++ b/src/ui/game/Game.css
@@ -1,8 +1,23 @@
 #GameView {
-    display: flex;
+    width: 100%;
+}
+
+#GameView, #GameView tr, #GameView tr>td {
+    margin: 0px;
+    padding: 0px;
+    height: 100vh;
+    vertical-align: top;
+}
+
+#RenderCanvasParent {
+    width: 70%;
+}
+
+#RenderCanvas {
+    border: 1px solid white;
 }
 
 #GameSidebar {
-    width: 100%;
-    border: 1px solid white;
+    width: 30%;
+    border: 3px solid var(--bgr-lighter-color);
 }
