--- a/src/ui/components/PlayerSettingsCard.css
+++ b/src/ui/components/PlayerSettingsCard.css
@@ -1,40 +1,44 @@
 .player_settings {
-    display: flex;
-    flex-direction: column;
-    flex-basis: 48%;
-    border: 3px solid;
-    padding: 2%;
-    margin: 1%;
-    background-color: var(--bgr-color);
-  }
+  flex: 1;
+  border: 3px solid;
+  padding: 2%;
+  background-color: var(--bgr-color);
+  gap: 0.5rem;
+}
+
+.player_settings:nth-of-type(1) {
+  border-color: red;
+}
+
+.player_settings:nth-of-type(2) {
+  border-color: green;
+}
+
+.player_settings:nth-of-type(3) {
+  border-color: blue;
+}
+
+.player_settings:nth-of-type(4) {
+  border-color: yellow;
+}
+
+.player_settings img {
+  image-rendering: pixelated; /* disable scaling interpolation */
+  width: 20%;
+  align-self: center;
+}
   
-  .player_settings:nth-of-type(1) {
-    border-color: red;
-  }
-  
-  .player_settings:nth-of-type(2) {
-    border-color: green;
-  }
-  
-  .player_settings:nth-of-type(3) {
-    border-color: blue;
-  }
-  
-  .player_settings:nth-of-type(4) {
-    border-color: yellow;
-  }
-  
-  .player_settings>.icon_wrap {
+/*  .player_settings>.icon_wrap {
     width: 32px;
     height: 32px;
     overflow: hidden;
     margin-left: auto;
     margin-right: auto;
   }
-  
+*/  
   /* DONT ASK. TRIAL AND ERROR. CROPS THE SPRITESHEET IMAGE */
   /* Cannot use clip-path, as it hides rest of the image but keeps the bounding box */
-  .player_settings:nth-of-type(1) .icon_wrap>img {
+/*  .player_settings:nth-of-type(1) .icon_wrap>img {
     margin: -2px 0px -320px -2px;
   }
   
@@ -48,7 +52,7 @@
   
   .player_settings:nth-of-type(4) .icon_wrap>img {
     margin: -128px 0px -251px -5px;
-  }
+  }*/
   
   .player_settings>div {
     display: flex;
