--- a/src/index.css
+++ b/src/index.css
@@ -7,7 +7,8 @@
   --secondary-color: #386C0B;
   --tertiary-color: #FF312E;
   --text-color: white;
-  --font-size: 2.5vh;
+  --font-size: min(1.5vw, 2.5vh);
+  --input-font-size: min(1vw, 2vh);
 }
 
 div {
@@ -26,9 +27,13 @@ body {
   padding: 0px;
 }
 
-html, button, input {
+html, button, input, select {
   font-family: 'Pixel-Art';
   font-size: var(--font-size);
+}
+
+input, select {
+  font-size: var(--input-font-size);
 }
 
 button, button:visited {
@@ -141,4 +146,8 @@ canvas {
 
 .space-around {
   justify-content: space-around;
+}
+
+.gap-1 {
+  gap: 1rem;
 }
