--- a/workspaces/frontend/src/ui/components/TextWithTooltip.css
+++ b/workspaces/frontend/src/ui/components/TextWithTooltip.css
@@ -1,3 +1,7 @@
+.tooltipwrapper {
+    position: relative;
+}
+
 .tooltiptarget {
     border: 3px solid white;
     padding: 10px;
@@ -11,6 +15,9 @@
 }
 
 .tooltipwrapper:hover .tooltiptarget {
+    width: 16rem;
+    left: -5rem;
+    top: -5rem;
     visibility: visible;
     opacity: 1;
 }
